Adjust breadcrumbs, fix sticky table header overlap.

--- a/scss/components/_breadcrumbs.scss
+++ b/scss/components/_breadcrumbs.scss
@@ -13,25 +13,16 @@
 
 .breadcrumbs__item {
 
-  &:first-child {
-
-    &:before {
-      content: '';
-    }
-
-  }
-
-  &:before {
-    content: ' ';
-  }
-
   &:after {
-    content: ' /';
+    margin-right: $spacing-small;
+    margin-left: $spacing-small;
+    content: '/';
   }
 
   &:last-child {
 
     &:after {
+      margin: 0;
       content: '';
     }
 
